--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -66,6 +66,7 @@ jobs:
         displayName: Unit Tests
       - bash: |
           set -e
+          cat activestate.yaml
           export GOFLAGS=-mod=vendor
           state auth --token $(PLATFORM_API_TOKEN)
           if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
