Implemented on deploy.go, and refactored in the process

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -21,6 +21,8 @@ jobs:
         value: "true"
       - name: ACTIVESTATE_CLI_DISABLE_UPDATES
         value: "true"
+      - name: GO_BUILD_TAGS
+        value: CI
     steps:
       - bash: |
           set -e
