--- a/activestate.yaml
+++ b/activestate.yaml
@@ -24,17 +24,19 @@ scripts:
     description: Generates assets required by the project that aren't just specific to the build
     value: |
       $constants.SET_ENV
-      ( # ensure `go run` is not affected by GOOS/GOARCH; runs in temporary scope to protect current values
-        unset GOOS GOARCH
-        packr
-        go run scripts/constants-generator/main.go -- internal/constants/generated.go
-      )
+      packr
+      go run scripts/constants-generator/main.go -- internal/constants/generated.go
   - name: build
-    description: Builds the project.
+    description: Builds the project with the host OS as the target OS.
     value: |
       $scripts.preprocess
-      [[ "${GOOS}" == "windows" && "$(go env GOHOSTOS)" != "windows" ]] && outExt=".exe"
-      go build -tags internal -o $constants.BUILD_TARGET${outExt} $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
+      go build -tags internal -o $constants.BUILD_TARGET $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
+  - name: build-for
+    description: Builds the project with the specified OS as the target OS. (valid values darwin, linux, windows)
+    value: |
+      $scripts.preprocess
+      export GOOS=${1}
+      go build -tags internal -o $constants.BUILD_TARGET $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
   - name: build-external
     description: Builds the project for external use (limiting its feature-set).
     value: |
