update int test configs

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -83,7 +83,7 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          go test .\pkg\expect .\internal\testhelpers\e2e
+          go test .\internal\testhelpers\e2e
           go test -v -parallel 6 .\test\integration
         env:
           GIT_BRANCH: $(Build.SourceBranch)
