--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ defaults:
         command: |
           set -e
 
-          go test ./pkg/expect ./internal/testhelpers/e2e
+          go test ./internal/testhelpers/e2e
           go test ./test/integration -v
     deployBits: &deployBits
       run:
