--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -57,10 +57,10 @@ jobs:
           state auth --token $(PLATFORM_API_TOKEN)
           state run preprocess
 
-          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | grep -v "e2e" | tee go-test.out
-          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-          cp go-test.out public/$(Agent.OS)-tests.out
-          cp $(Agent.OS)-tests.xml public
+          # go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | grep -v "e2e" | tee go-test.out
+          # go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          # cp go-test.out public/$(Agent.OS)-tests.out
+          # cp $(Agent.OS)-tests.xml public
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
@@ -83,8 +83,8 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          go test .\internal\testhelpers\e2e
-          go test -v -parallel 6 .\test\integration
+          # go test .\internal\testhelpers\e2e
+          go test -v -parallel 6 .\test\integration -run '.*/TestLanguages_list'
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
