debug languages_int_test.go

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -84,7 +84,7 @@ jobs:
           SET GOFLAGS=-mod=vendor
           SET SHELL=
           # go test .\internal\testhelpers\e2e
-          go test -v -parallel 6 .\test\integration
+          go test -v -parallel 6 .\test\integration\languages_int_test.go
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
