also DEBUG output

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -57,10 +57,12 @@ jobs:
           state auth --token $(PLATFORM_API_TOKEN)
           state run preprocess
 
-          # go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | grep -v "e2e" | tee go-test.out
-          # go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-          # cp go-test.out public/$(Agent.OS)-tests.out
-          # cp $(Agent.OS)-tests.xml public
+          exit 0
+
+          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | grep -v "e2e" | tee go-test.out
+          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          cp go-test.out public/$(Agent.OS)-tests.out
+          cp $(Agent.OS)-tests.xml public
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
