--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -86,7 +86,7 @@ jobs:
           SET GOFLAGS=-mod=vendor
           SET SHELL=
           # go test .\internal\testhelpers\e2e
-          go test -v -parallel 6 .\test\integration\languages_int_test.go
+          go test -v -parallel 6 .\test\integration\
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
