Run integration tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,7 @@ jobs:
       - <<: *prepareEnv
       - <<: *runTests
       - <<: *buildCli
+      - <<: *runIntegrationTests
       - <<: *deployBits
       - <<: *storeArtifacts
       - <<: *storeTestResults
@@ -158,6 +159,7 @@ jobs:
       - <<: *prepareEnv
       - <<: *runTests
       - <<: *buildCli
+      - <<: *runIntegrationTests
       - <<: *deployBits
       - <<: *storeArtifacts
       - <<: *storeTestResults
