--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -113,7 +113,7 @@ jobs:
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build Windows MSI
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
