re-set the CI configurations

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -21,6 +21,8 @@ jobs:
         value: "true"
       - name: ACTIVESTATE_CLI_DISABLE_UPDATES
         value: "true"
+      - name: GO_BUILD_TAGS
+        value: CI
     steps:
       - bash: |
           set -e
@@ -51,6 +53,21 @@ jobs:
         displayName: Install State Tool
       - bash: |
           set -e
+
+          export GOFLAGS=-mod=vendor
+
+          state auth --token $(PLATFORM_API_TOKEN)
+          state run preprocess
+
+          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | grep -v "e2e" | tee go-test.out
+          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          cp go-test.out public/$(Agent.OS)-tests.out
+          cp $(Agent.OS)-tests.xml public
+        env:
+          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
+        displayName: Unit Tests
+      - bash: |
+          set -e
           export GOFLAGS=-mod=vendor
           state auth --token $(PLATFORM_API_TOKEN)
           if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
@@ -68,12 +85,13 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          # go test .\internal\testhelpers\e2e
-          go test -v -parallel 6 .\test\integration\
+          go test .\internal\testhelpers\e2e
+          go test -v -parallel 6 .\test\integration
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
         displayName: Windows Integration Tests
+        condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
         displayName: 'Download ActiveState .p12 file'
