Disable integration tests again

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -91,7 +91,7 @@ jobs:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
         displayName: Windows Integration Tests
-        #condition: eq(variables['Build.Reason'], 'Schedule')
+        condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
         displayName: 'Download ActiveState .p12 file'
@@ -113,7 +113,7 @@ jobs:
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build Windows MSI
-        #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
