--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -111,6 +111,7 @@ jobs:
 
           /c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/signtool.exe sign -d "ActiveState State Tool" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./public/wix/state_tool_setup.msi
         env:
+          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build Windows MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
