--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -66,6 +66,7 @@ jobs:
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
+        condition: eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           set -e
           export GOFLAGS=-mod=vendor
@@ -114,7 +115,7 @@ jobs:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build Windows MSI
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
