--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -66,7 +66,7 @@ jobs:
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
-        condition: eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
       - bash: |
           set -e
           export GOFLAGS=-mod=vendor
