--- a/.github/workflows/cla-bot.yml
+++ b/.github/workflows/cla-bot.yml
@@ -21,5 +21,5 @@ jobs:
           # branch should not be protected
           branch: 'clas'
           whitelist: ""
-          empty-commit-flag: false
+          empty-commit-flag: true
           blockchain-storage-flag: false
