--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -90,6 +90,8 @@ jobs:
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
+          INTEGRATION_TEST_USERNAME: $(INTEGRATION_TEST_USERNAME)
+          INTEGRATION_TEST_PASSWORD: $(INTEGRATION_TEST_PASSWORD)
         displayName: Windows Integration Tests
         condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
