--- a/activestate.yaml
+++ b/activestate.yaml
@@ -127,6 +127,8 @@ scripts:
     description: Runs integration tests.
     value: |
       unset ACTIVESTATE_ACTIVATED
+      export INTEGRATION_TEST_USERNAME=$secrets.project.INTEGRATION_TEST_USERNAME
+      export INTEGRATION_TEST_PASSWORD=$secrets.project.INTEGRATION_TEST_PASSWORD
       go test ./test/integration -v
   - name: clean
     description: Cleans out the build dir.
