--- a/.github/workflows/cla-bot.yml
+++ b/.github/workflows/cla-bot.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path-to-signatures: 'signatures/version1/cla.json'
+          path-to-signatures: 'signatures/cla.json'
           path-To-cladocument: 'https://github.com/ActiveState/cli/blob/master/cla.md'
           # branch should not be protected
           branch: 'clas'
