--- a/.github/workflows/cla-bot.yml
+++ b/.github/workflows/cla-bot.yml
@@ -20,6 +20,6 @@ jobs:
           path-To-cladocument: 'https://github.com/ActiveState/cli/blob/master/cla.md'
           # branch should not be protected
           branch: 'clas'
-          whitelist: mdrohmann
+          whitelist: ""
           empty-commit-flag: true
           blockchain-storage-flag: false
