re-activate integration tests on azure and increase timeout

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -86,14 +86,13 @@ jobs:
           SET GOFLAGS=-mod=vendor
           SET SHELL=
           go test .\internal\testhelpers\e2e
-          go test -v -parallel 6 .\test\integration
+          go test -timeout 45m -v -parallel 6 .\test\integration
         env:
           GIT_BRANCH: $(Build.SourceBranch)
           PLATFORM_API_TOKEN: $(PLATFORM_API_TOKEN)
           INTEGRATION_TEST_USERNAME: $(INTEGRATION_TEST_USERNAME)
           INTEGRATION_TEST_PASSWORD: $(INTEGRATION_TEST_PASSWORD)
         displayName: Windows Integration Tests
-        condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
         displayName: 'Download ActiveState .p12 file'
