remove e2e session test -> it is handled in termtest already

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -59,7 +59,7 @@ jobs:
           state auth --token $(PLATFORM_API_TOKEN)
           state run preprocess
 
-          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | grep -v "e2e" | tee go-test.out
+          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
           go-junit-report < go-test.out > $(Agent.OS)-tests.xml
           cp go-test.out public/$(Agent.OS)-tests.out
           cp $(Agent.OS)-tests.xml public
@@ -85,7 +85,6 @@ jobs:
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
           SET SHELL=
-          go test .\internal\testhelpers\e2e
           go test -timeout 45m -v -parallel 6 .\test\integration
         env:
           GIT_BRANCH: $(Build.SourceBranch)
