Implement events cmd under new architecture, retire external builds

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -69,13 +69,10 @@ jobs:
       - bash: |
           set -e
           export GOFLAGS=-mod=vendor
-          state auth --token $(PLATFORM_API_TOKEN)
           if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
-            echo "Building for external use"
-            BRANCH_OVERRIDE=unstable state run build-external
-            BRANCH_OVERRIDE=unstable state run generate-update
+            export BRANCH_OVERRIDE=unstable
           fi
-          echo "Building for internal use"
+          state auth --token $(PLATFORM_API_TOKEN)
           state run build
           state run generate-update
         env:
