--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,12 +48,8 @@ defaults:
           set -e
           BRANCH=$(git rev-parse --abbrev-ref HEAD)
           if [[ "$BRANCH" == "master" ]]; then
-            echo "Building for external use"
-            BRANCH_OVERRIDE=unstable state run build-external
-            BRANCH_OVERRIDE=unstable state run generate-update
+            export BRANCH_OVERRIDE=unstable
           fi
-
-          echo "Building for internal use"
           state run build
           state run generate-update
     runIntegrationTests: &runIntegrationTests
