Trial timeout in azure ci unit test step

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -65,6 +65,7 @@ jobs:
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
         displayName: Unit Tests
+        timeoutInMinutes: 10
       - bash: |
           set -e
           export GOFLAGS=-mod=vendor
