--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,7 @@ jobs:
       - <<: *runTests
       - <<: *buildCli
       - <<: *deployBits
+      - <<: *runIntegrationTests
       - <<: *storeArtifacts
       - <<: *storeTestResults
   build-windows:
@@ -154,6 +155,7 @@ jobs:
       - <<: *runTests
       - <<: *buildCli
       - <<: *deployBits
+      - <<: *runIntegrationTests
       - <<: *storeArtifacts
       - <<: *storeTestResults
   test-linux:
