Test basic msbuild step

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -111,8 +111,12 @@ jobs:
         env:
           GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
-        displayName: Build Windows MSI
+        displayName: Build State Tool MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+      - bash: |
+          msbuild.exe ./public/wix/Deploy/Deploy.sln
+        displayName: Build Deploy MSI
+        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
