--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -51,21 +51,21 @@ jobs:
       - bash: |
           ./public/install.sh -b master -n -t $(BINPATH)
         displayName: Install State Tool
-      - bash: |
-          set -e
+      # - bash: |
+      #     set -e
 
-          export GOFLAGS=-mod=vendor
+      #     export GOFLAGS=-mod=vendor
 
-          state auth --token $(PLATFORM_API_TOKEN)
-          state run preprocess
+      #     state auth --token $(PLATFORM_API_TOKEN)
+      #     state run preprocess
 
-          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
-          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-          cp go-test.out public/$(Agent.OS)-tests.out
-          cp $(Agent.OS)-tests.xml public
-        env:
-          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
-        displayName: Unit Tests
+      #     go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
+      #     go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+      #     cp go-test.out public/$(Agent.OS)-tests.out
+      #     cp $(Agent.OS)-tests.xml public
+      #   env:
+      #     GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
+      #   displayName: Unit Tests
       - bash: |
           set -e
           export GOFLAGS=-mod=vendor
