--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -66,18 +66,18 @@ jobs:
       #   env:
       #     GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
       #   displayName: Unit Tests
-      - bash: |
-          set -e
-          export GOFLAGS=-mod=vendor
-          if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
-            export BRANCH_OVERRIDE=unstable
-          fi
-          state auth --token $(PLATFORM_API_TOKEN)
-          state run build
-          state run generate-update
-        env:
-          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
-        displayName: Build
+      # - bash: |
+      #     set -e
+      #     export GOFLAGS=-mod=vendor
+      #     if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
+      #       export BRANCH_OVERRIDE=unstable
+      #     fi
+      #     state auth --token $(PLATFORM_API_TOKEN)
+      #     state run build
+      #     state run generate-update
+      #   env:
+      #     GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
+      #   displayName: Build
       - script: |
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
