Searching for msbuild binary

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -114,7 +114,7 @@ jobs:
         displayName: Build State Tool MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
-          ls -lah /c/Program\ Files\ \(x86\)/MSBuild/15
+          ls -lah /c/Program\ Files\ \(x86\)/MSBuild/15.0/
           msbuild.exe ./public/wix/Deploy/Deploy.sln
         displayName: Build Deploy MSI
         # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
