Searching for msbuild binary

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -114,8 +114,8 @@ jobs:
         displayName: Build State Tool MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
-          echo "Searching directory: /c/Program\ Files\ \(x86\)/MSBuild/15.0/.Net/.NetNative/15.0.24211"
-          ls -lah /c/Program\ Files\ \(x86\)/MSBuild/15.0/.Net/.NetNative/15.0.24211
+          echo "Searching directory: /c/Program\ Files\ \(x86\)/MSBuild/15.0/.Net/.NetNative/15.0.24211/x64"
+          ls -lah /c/Program\ Files\ \(x86\)/MSBuild/15.0/.Net/.NetNative/15.0.24211/x64
           msbuild.exe ./public/wix/Deploy/Deploy.sln
         displayName: Build Deploy MSI
         # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
