Add more configuration inputs to msbuild task

--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -113,15 +113,16 @@ jobs:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Build State Tool MSI
         condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-      - bash: |
-          echo "Searching directory: /c/Program\ Files\ \(x86\)/MSBuild/15.0/.Net/.NetNative/15.0.24211/x64"
-          ls -lah /c/Program\ Files\ \(x86\)/MSBuild/15.0/.Net/.NetNative/15.0.24211/x64
-          # msbuild.exe ./public/wix/Deploy/Deploy.sln
-        displayName: Build Deploy MSI
-        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: MSBuild@1
         inputs:
-          solution: './public/wix/Deploy/Deploy.sln'
+          displayName: Build Deploy MSI
+          inputs:
+            solution: './public/wix/Deploy/Deploy.sln'
+            platform: 'x86'
+            # configuration: 'Release'
+            msbuildArguments: >
+              /target:Build
+              /p:RunWixToolsOutOfProc=true
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
