--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -118,7 +118,7 @@ jobs:
         inputs:
           solution: './public/wix/Deploy/Deploy.sln'
           platform: 'x86'
-          # configuration: 'Release'
+          configuration: 'Release'
           msbuildArguments: >
             /target:Build
             /p:RunWixToolsOutOfProc=true
