--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -51,33 +51,33 @@ jobs:
       - bash: |
           ./public/install.sh -b master -n -t $(BINPATH)
         displayName: Install State Tool
-      # - bash: |
-      #     set -e
+      - bash: |
+          set -e
 
-      #     export GOFLAGS=-mod=vendor
+          export GOFLAGS=-mod=vendor
 
-      #     state auth --token $(PLATFORM_API_TOKEN)
-      #     state run preprocess
+          state auth --token $(PLATFORM_API_TOKEN)
+          state run preprocess
 
-      #     go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
-      #     go-junit-report < go-test.out > $(Agent.OS)-tests.xml
-      #     cp go-test.out public/$(Agent.OS)-tests.out
-      #     cp $(Agent.OS)-tests.xml public
-      #   env:
-      #     GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
-      #   displayName: Unit Tests
-      # - bash: |
-      #     set -e
-      #     export GOFLAGS=-mod=vendor
-      #     if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
-      #       export BRANCH_OVERRIDE=unstable
-      #     fi
-      #     state auth --token $(PLATFORM_API_TOKEN)
-      #     state run build
-      #     state run generate-update
-      #   env:
-      #     GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
-      #   displayName: Build
+          go test -v -parallel 12 -covermode=atomic -coverprofile=c.out `go list ./... | grep -vE "(secrets-)?api/(client|model)" | grep -v "integration"` | grep -v "expect" | tee go-test.out
+          go-junit-report < go-test.out > $(Agent.OS)-tests.xml
+          cp go-test.out public/$(Agent.OS)-tests.out
+          cp $(Agent.OS)-tests.xml public
+        env:
+          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
+        displayName: Unit Tests
+      - bash: |
+          set -e
+          export GOFLAGS=-mod=vendor
+          if [[ "$BUILD_SOURCEBRANCHNAME" == "master" ]]; then
+            export BRANCH_OVERRIDE=unstable
+          fi
+          state auth --token $(PLATFORM_API_TOKEN)
+          state run build
+          state run generate-update
+        env:
+          GITHUB_REPO_TOKEN: $(GITHUB_REPO_TOKEN)
+        displayName: Build
       - script: |
           SET GOPATH="C:\Users\VssAdministrator\go"
           SET GOFLAGS=-mod=vendor
@@ -122,12 +122,13 @@ jobs:
           msbuildArguments: >
             /target:Build
             /p:RunWixToolsOutOfProc=true
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))  
       - bash: |
           /c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/signtool.exe sign -d "ActiveState State Tool" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./public/wix/Deploy/bin/Release/Deploy.msi
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Sign Deploy MSI
-        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
