--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
         go-version: [1.13.x]
         platform: [ubuntu-latest] # , macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
+    env:
+      ACTIVESTATE_CLI_DISABLE_RUNTIME: true # We don't need Perl or Python
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -34,6 +36,8 @@ jobs:
 
           echo "::add-path::$HOME/.local/bin"
       - name: build
+        env:
+          GOFLAGS: -mod=vendor
         run: |
           set -e
           BRANCH=$(git rev-parse --abbrev-ref HEAD)
