--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,13 +1,11 @@
-name: Build-Test-Deploy
+name: Integration Tests
 
 on:
-  push:
-    branches:
-      - master
-  pull_request:
+  schedule:
+    - cron:  '0 0 * * *'
 
 jobs:
-  build:
+  build-test:
     strategy:
       matrix:
         go-version: [1.13.x]
@@ -32,7 +30,6 @@ jobs:
           ./public/install.sh -n -b master
           echo "::add-path::$HOME/.local/bin"
           state run preprocess
-          printenv
       - name: build
         run: |
           set -e
@@ -42,29 +39,5 @@ jobs:
           fi
           state run build
           state run generate-update
-  unit-test:
-    strategy:
-      matrix:
-        go-version: [1.13.x]
-        platform: [ubuntu-latest] # , macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
-    env:
-      GOFLAGS: -mod=vendor
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: prepare
-        run: |
-          pushd /
-          go get github.com/gobuffalo/packr/packr
-          popd
-
-          ./public/install.sh -n -b master
-          echo "::add-path::$HOME/.local/bin"
-          state run preprocess
-      - name: unit tests
-        run: go test -v -covermode=atomic -coverprofile=c.out `$GOROOT/bin/go list ./... | grep -v api | grep -v integration | grep -v expect`
+      - name: integration tests
+        run: go test -timeout 20m ./test/integration -v
