--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,69 +1,67 @@
 name: Build-Test-Deploy
-
-on:
+true:
   push:
     branches:
-      - master
+    - master
   pull_request:
-
+  - master
 jobs:
-  build:
+- build:
+    name: Build
     strategy:
       matrix:
-        go-version: [1.13.x]
-        platform: [ubuntu-latest] # , macos-latest, windows-latest]
+        go-version:
+        - 1.13.x
+        platform:
+        - ubuntu-latest
     runs-on: ${{ matrix.platform }}
     env:
-      ACTIVESTATE_CLI_DISABLE_RUNTIME: true # We don't need Perl or Python
+      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: prepare
-        run: |
-          pushd /
-          go get github.com/gobuffalo/packr/packr
-          popd
-
-          ./public/install.sh -n -b master
-          echo "::add-path::$HOME/.local/bin"
-          state run preprocess
-      - name: build
-        run: |
-          set -e
-          BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          if [[ "$BRANCH" == "master" ]]; then
-            export BRANCH_OVERRIDE=unstable
-          fi
-          state run build
-          state run generate-update
-  unit-test:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: Install State Tool
+      run: |
+        ./public/install.sh -n -b master
+        echo "::add-path::$HOME/.local/bin"
+    - name: Build
+      run: |
+        BRANCH=$(git rev-parse --abbrev-ref HEAD)
+        if [[ "$BRANCH" == "master" ]]; then
+        export BRANCH_OVERRIDE=unstable
+        fi
+        state run build
+    - name: Generate Update
+      run: |
+        state run generate-update
+- unit-test:
+    name: Unit Test
     strategy:
       matrix:
-        go-version: [1.13.x]
-        platform: [ubuntu-latest] # , macos-latest, windows-latest]
+        go-version:
+        - 1.13.x
+        platform:
+        - ubuntu-latest
     runs-on: ${{ matrix.platform }}
     env:
+      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: prepare
-        run: |
-          pushd /
-          go get github.com/gobuffalo/packr/packr
-          popd
-
-          ./public/install.sh -n -b master
-          echo "::add-path::$HOME/.local/bin"
-          state run preprocess
-      - name: unit tests
-        run: go test -v -covermode=atomic -coverprofile=c.out `$GOROOT/bin/go list ./... | grep -v api | grep -v integration | grep -v expect`
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: Install State Tool
+      run: |
+        ./public/install.sh -n -b master
+        echo "::add-path::$HOME/.local/bin"
+    - name: Unit Tests
+      run: go test -v -covermode=atomic -coverprofile=c.out `$GOROOT/bin/go list ./...
+        | grep -v api | grep -v integration | grep -v expect`
