--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -120,13 +120,13 @@ jobs:
           msbuildArguments: >
             /target:Build
             /p:RunWixToolsOutOfProc=true
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - bash: |
           /c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/signtool.exe sign -d "ActiveState State Tool" -f "$(msiCert.secureFilePath)" -p $(CODE_SIGNING_PASSWD) ./public/wix/Deploy/bin/Release/Deploy.msi
         env:
           CODE_SIGNING_PASSWD: $(CODE_SIGNING_PASSWD)
         displayName: Sign Deploy MSI
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       - task: PublishBuildArtifacts@1
         inputs:
           pathtoPublish: public
