--- a/public/wix/Deploy/InstallStateTool/InstallStateTool.csproj
+++ b/public/wix/Deploy/InstallStateTool/InstallStateTool.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="CustomAction.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ResetProgress\Status.csproj">
+      <Project>{5eb4dcdf-0e44-4db7-9b33-cef19b9bb2b3}</Project>
+      <Name>Status</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(WixCATargetsPath)" Condition=" '$(WixCATargetsPath)' != '' " />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\WiX\v3.x\Wix.CA.targets" Condition=" '$(WixCATargetsPath)' == '' AND Exists('$(MSBuildExtensionsPath32)\Microsoft\WiX\v3.x\Wix.CA.targets') " />
