add asy scripts for ppm

--- a/activestate.yaml
+++ b/activestate.yaml
@@ -4,6 +4,8 @@ constants:
     value: -ldflags="-s -w"
   - name: CLI_PKGS
     value: ./cmd/state
+  - name: PPM_PKGS
+    value: ./cmd/ppm
   - name: BUILD_TARGET
     constraints:
       os: macos,linux
@@ -12,6 +14,18 @@ constants:
     constraints:
       os: windows
     value: ./build/state.exe
+  - name: PPM_BUILD_TARGET
+    constraints:
+      os: linux
+    value: ppm-linux
+  - name: PPM_BUILD_TARGET
+    constraints:
+      os: macos
+    value: ppm-darwin
+  - name: PPM_BUILD_TARGET
+    constraints:
+      os: windows
+    value: ppm-windows
   - name: SET_ENV
     description: The environment settings used throughout our project
     value: |
@@ -37,6 +51,15 @@ scripts:
       $scripts.preprocess
       export GOOS=${1}
       go build -tags "internal $GO_BUILD_TAGS" -o $constants.BUILD_TARGET $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
+  - name: build-ppm
+    description: Builds the ppm shim command that is installed with ActivePerl installations
+    value: |
+      go build -o ./build/$constants.PPM_BUILD_TARGET $constants.PPM_PKGS
+  - name: deploy-ppm
+    description: Deploys the PPM shim to s3
+    value: |
+      echo go run scripts/s3-deployer/main.go build/$constants.PPM_BUILD_TARGET ca-central-1 cli-update update/ppm/$constants.PPM_BUILD_TARGET
+      go run scripts/s3-deployer/main.go build/$constants.PPM_BUILD_TARGET ca-central-1 cli-update update/ppm/$constants.PPM_BUILD_TARGET
   - name: generate-update
     description: Generate update files
     value: |
