--- a/public/wix/Deploy/InstallStateTool/InstallStateTool.csproj
+++ b/public/wix/Deploy/InstallStateTool/InstallStateTool.csproj
@@ -70,6 +70,10 @@
       <Project>{5eb4dcdf-0e44-4db7-9b33-cef19b9bb2b3}</Project>
       <Name>Status</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Uninstall\Uninstall.csproj">
+      <Project>{4c663442-bd30-4183-9e55-fd3eef13f032}</Project>
+      <Name>Uninstall</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(WixCATargetsPath)" Condition=" '$(WixCATargetsPath)' != '' " />
