--- a/public/wix/Deploy/StateDeploy/StateDeploy.csproj
+++ b/public/wix/Deploy/StateDeploy/StateDeploy.csproj
@@ -66,7 +66,7 @@
     <Content Include="CustomAction.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ResetProgress\Status.csproj">
+    <ProjectReference Include="..\Status\Status.csproj">
       <Project>{5eb4dcdf-0e44-4db7-9b33-cef19b9bb2b3}</Project>
       <Name>Status</Name>
     </ProjectReference>
