--- a/.azure/config.yml
+++ b/.azure/config.yml
@@ -88,7 +88,7 @@ jobs:
           INTEGRATION_TEST_USERNAME: $(INTEGRATION_TEST_USERNAME)
           INTEGRATION_TEST_PASSWORD: $(INTEGRATION_TEST_PASSWORD)
         displayName: Windows Integration Tests
-        #condition: eq(variables['Build.Reason'], 'Schedule')
+        condition: eq(variables['Build.Reason'], 'Schedule')
       - task: DownloadSecureFile@1
         name: msiCert
         displayName: 'Download ActiveState .p12 file'
