--- a/public/wix/Deploy/InstallStateTool/InstallStateTool.csproj
+++ b/public/wix/Deploy/InstallStateTool/InstallStateTool.csproj
@@ -66,6 +66,10 @@
     <Content Include="CustomAction.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ActiveState\ActiveState.csproj">
+      <Project>{6db57871-36b9-42c2-aeb9-0f5e3a2f8272}</Project>
+      <Name>ActiveState</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Status\Status.csproj">
       <Project>{5eb4dcdf-0e44-4db7-9b33-cef19b9bb2b3}</Project>
       <Name>Status</Name>
