--- a/activestate.yaml
+++ b/activestate.yaml
@@ -133,7 +133,7 @@ scripts:
   - name: debug
     description: "Runs a remote debugger, that can be hooked into from your IDE, example usage: `state run debug activate` (will debug `state activate`)"
     standalone: true
-    value: echo dlv debug --headless --listen=:2346 --api-version=2 github.com/ActiveState/cli/cmd/state -- $@
+    value: dlv debug --headless --listen=:2346 --api-version=2 github.com/ActiveState/cli/cmd/state -- $@
 events:
   - name: ACTIVATE
     value: |
