--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,8 +149,9 @@ jobs:
             tar -xzf golang.tar.gz
             popd
       - <<: *prepareEnv
-      - <<: *runTests
+      # - <<: *runTests
       - <<: *buildCli
+      - <<: *runIntegrationTests
       - <<: *deployBits
       #- <<: *runIntegrationTests
       - <<: *storeArtifacts
